--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .bg-gradient {
-    background: linear-gradient(90.01deg, #F7F7F7 52%, rgba(247, 247, 247, 0) 132.82%);
+    background: linear-gradient(90.01deg, #F7F7F7 47%, rgba(247, 247, 247, 0) 132.82%);
     position: absolute;
     right: 0;
     left: 0;
@@ -11,6 +11,7 @@
     position: absolute;
     right: 0;
     top: 0;
+    max-width: 100%;
     height: 100%;
 }
 
@@ -103,7 +104,7 @@
     left: 2px;
     top: 4px;
     margin-left: -30px;
-    border: 1px solid;
+    border: 1px solid #CBCBCB;
     border-radius: 50%;
     background-color: #FFFFFF;
 }
@@ -127,7 +128,7 @@
     left: 0;
     top: 0;
     margin-left: -30px;
-    border: 1px solid;
+    border: 1px solid #CBCBCB;
     border-radius: 50%;
     background-color: #fff;
 }
@@ -141,7 +142,7 @@
 }
 
 .checkbox input:checked+label::before {
-    border-color: transparent;
+    border: 1px solid #CBCBCB;
     background-color: #FFFFFF;
 }
 
@@ -149,7 +150,7 @@
     background: url('../images/check.svg');
     background-repeat: no-repeat;
     top: 5px;
-    left: 6px;
+    left: 5px;
     border-color: transparent;
     background-color: transparent;
 }
