--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,16 @@
 .bg-gradient {
-    background: linear-gradient(90.01deg, #F7F7F7 37%, rgba(247, 247, 247, 0) 160.82%);
+    background: linear-gradient(90.01deg, #F7F7F7 47%, rgba(247, 247, 247, 0) 160.82%);
     position: absolute;
     right: 0;
     left: 0;
     top: 0;
     bottom: 0;
+}
+
+@media (max-width: 1200px) {
+    .bg-gradient {
+        background: linear-gradient(90.01deg, #F7F7F7 37%, rgba(247, 247, 247, 0) 160.82%);
+    }
 }
 
 @media (max-width: 991px) {
@@ -22,9 +28,9 @@
 .img-style {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 1px;
     max-width: 100%;
-    height: 100%;
+    height: calc(100% - 2px);
 }
 
 .mt-60px {
