--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,7 @@
 
 @media (max-width: 991px) {
     .bg-gradient {
-        background: linear-gradient(90.01deg, #F7F7F7 20%, rgba(247, 247, 247, 0) 192.82%);
-    }
-}
-
-@media (max-width: 768px) {
-    .bg-gradient {
-        background: linear-gradient(90.01deg, #F7F7F7 0, rgba(247, 247, 247, 0) 324.82%);
+        background: linear-gradient(181deg, #F7F7F7 60.88%, rgba(247, 247, 247, 0) 115.73%);
     }
 }
 
@@ -35,6 +29,10 @@
 
 .mt-60px {
     margin-top: 60px;
+}
+
+.mb-25 {
+    margin-bottom: 25px;
 }
 
 .mb-60px {
@@ -130,8 +128,8 @@
 .checkbox label {
     font-size: 14px;
     font-weight: 400;
-    color: #FFFFFF;
-    text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.56);
+    color: #000000;
+    text-shadow: 0px 3px 6px rgb(255 255 255 / 56%);
     display: inline-block;
     position: relative;
     padding-left: 10px;
